# vivid-time-rs

./: Cargo.toml  README.md  rustfmt.toml
mixed_point/: Cargo.toml
mixed_point/src/: lib.rs  types.rs
mixed_point/src/cycle/: limited_cycle.rs  mod.rs  period.rs  simple_cycle.rs  types.rs
mixed_point/src/filter/: mod.rs  simple.rs  types.rs
mixed_point/src/mixed/: simple.rs  types.rs
numburs/: Cargo.toml
numburs/src/: integral.rs  lib.rs  real.rs  representation.rs
vivid_time/: Cargo.toml
vivid_time/src/: base.rs  conversion.rs  lib.rs
vivid_time/src/formatting/: mixed_point.rs  mod.rs  numburs.rs  system_n.rs  types.rs
vivid_time/src/system_n/: calendar.rs  clock.rs  depth.rs  mod.rs  serialization.rs  time.rs  units.rs
vivid_time/src/temporal/: mod.rs  standard.rs
vivid_time/src/unix/: units.rs
vivid_time_cli/: Cargo.toml
vivid_time_cli/src/: cli.rs  date_parsing.rs  main.rs  outputs.rs
