[package]
name = "vivid_time"
version = "0.1.0"
authors = ["hexxiiiz <hexxiiiz@gmail.com>"]
edition = "2021"                            # This is a version tag, not date

[dependencies]
anyhow = "1.0.89"
assert_float_eq = "1.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
chronos = "0.0.0"
claim = "0.5.0"
derive_more = "0.99.17"
either = "1.13.0"
mixed_point = { path = "../mixed_point" }
ntest = "0.9.3"
num-traits = "0.2.16"
numburs = { path = "../numburs" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
