[package]
name = "vivid_time_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
dateparser = "0.2.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
vivid_time = { path = "../vivid_time" }

[[bin]]
name = "vivid-time"
path = "src/main.rs"
